# vulnscope

./: .gitignore  LICENSE  README.md  VULNSCOPE_IMPLEMENTATION_PLAN.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_databases.py  test_inventory.py  test_livepatch.py  test_matcher.py  test_remediate.py  test_service.py  test_summary.py  test_watch.py
tests/fixtures/: dpkg_output.txt  kev_response.json  osv_response.json  pip_output.json  snap_output.txt
vulnscope/: cli.py  config.py  matcher.py  models.py  notify.py  remediate.py  scan_store.py  scanner.py  service.py
vulnscope/databases/: __init__.py  base.py  cache.py  cpe_map.py  kev.py  nvd.py  osv.py
vulnscope/export/: csv_export.py  html_export.py  json_export.py  sarif_export.py
vulnscope/inventory/: __init__.py  apk.py  base.py  brew.py  cargo_packages.py  docker_images.py  dpkg.py  flatpak.py  livepatch.py  npm_packages.py  os_info.py  pacman.py  pip_packages.py  rpm.py  snap.py
vulnscope/ui/: app.py  detail_view.py  tables.py
