[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vulnscope"
version = "0.1.0"
description = "CLI vulnerability scanner for Linux systems"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "michaelsc44" }]
keywords = ["security", "vulnerabilities", "CVE", "scanner", "linux"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "httpx>=0.27",
    "textual>=0.80",
    "rich>=13.0",
    "click>=8.1",
    "packaging>=24.0",
    "platformdirs>=4.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
clipboard = ["pyperclip>=1.8"]
dev = ["pytest", "pytest-asyncio", "respx", "ruff"]

[project.scripts]
vulnscope = "vulnscope.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["vulnscope*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
